<resources>
    <string name="app_name">PasswordProject</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_strong_password">强密码</string>
    <string name="title_easy_to_remember">易记密码</string>
    <string name="title_PIN_word">PIN码</string>
    <string name="title_tools">工具箱</string>
    <string name="title_guidance">使用指南</string>

    <string name="guidance_of_security_p1_title">
        为什么密码安全很重要？
    </string>
    <string name="guidance_of_security_p1_content">
        在当今数字时代，密码是保护我们在线账户的第一道防线。一个强大的密码可以：\n
        防止未经授权的访问\n
        保护个人隐私和敏感信息\n
        预防身份盗窃\n
        确保数据安全\n
    </string>

    <string name="guidance_of_security_p2_title"> </string>
    <string name="guidance_of_security_p2_content"> </string>

    <string name="guidance_of_security_p3_title"> </string>
    <string name="guidance_of_security_p3_content"> </string>

    <string name="guidance_of_security_p4_title"> </string>
    <string name="guidance_of_security_p4_content"> </string>

    <string name="guidance_of_security_p5_title"> </string>
    <string name="guidance_of_security_p5_content"> </string>
    <string name="txt_groupName_encryptionTool_button">加密算法</string>
    <string name="txt_groupName_encryptionTool_inputPassword">待加密文本</string>
    <string name="encryptionTool_hint_input">请输入需要加密的文本</string>
    <string name="encryptionTool_hint_passkey">请输入密钥</string>
    <string name="txt_groupName_encryptionTool_passkey">密钥</string>
    <string name="txt_strong_password">强密码生成器</string>
    <string name="text_easy_remember_password">易记密码生成器</string>
    <string name="text_p_i_n_word">PIN码生成器</string>
    <string name="text_encryption_tool">密码加密工具</string>
    <string name="txt_strong_password_limitation_head">字母开头</string>
    <string name="txt_strong_password_setting_head">密码设置</string>
    <string name="txt_strong_password_create">生成密码</string>
    <string name="title_strong_password_save">保存设置</string>
    <string name="txt_strong_password_reset">重置</string>
    <string name="txt_strong_password_save">保存设置</string>
    <string name="txt_strong_password_strength_of_password">密码长度</string>
    <string name="txt_strong_password_strength_of_password_hint">建议长度：在12到21之间</string>
    <string name="txt_strong_password_amount_of_password">生成数量</string>
    <string name="txt_strong_password_amount_of_password_hint">选择要生成的密码数量</string>
    <string name="txt_strong_password_symbol_of_password">自定义符号</string>
    <string name="txt_strong_password_symbol_of_password_hint">自定义密码中可以使用的特殊符号</string>
    <string name="txt_strong_password_exclude_of_password">排除字符</string>
    <string name="txt_strong_password_exclude_of_password_hint">这些字符将不会出现在生成的密码中</string>
    <string name="txt_strong_password_setting_symbol01">大写字母</string>
    <string name="short_create">生</string>
    <string name="short_save">存</string>
    <string name="short_reset">重</string>
    <string name="hint_output">生成的密码在这里哦～～～</string>
    <string name="txt_name_easy">易记密码</string>
    <string name="txt_easy_min">最小单词长度:</string>
    <string name="txt_easy_firstw">单个首字母大写</string>
    <string name="txt_easy_numbs">在末尾添加随机数字</string>
    <string name="txt_easy_depart">分隔符</string>
    <string name="hint_easy_design">自定义分隔符</string>


</resources>