<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.passwordproject.MainActivity">
    <item
        android:id="@+id/fragment_strong_password"
        android:orderInCategory="100"
        android:title="@string/txt_strong_password"
        app:showAsAction="never" />
    <item
        android:id="@+id/fragment_easy_remember_password"
        android:orderInCategory="100"
        android:title="@string/text_easy_remember_password"
        app:showAsAction="never" />
    <item
        android:id="@+id/fragment_p_i_n_word"
        android:orderInCategory="100"
        android:title="@string/text_p_i_n_word"
        app:showAsAction="never" />
    <item
        android:id="@+id/fragment_encryption_tool"
        android:orderInCategory="100"
        android:title="@string/text_encryption_tool"
        app:showAsAction="never" />

</menu>