<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="android.view.accessibility.AccessibilityEvent" />

    </data>

<LinearLayout
    android:id="@+id/fragment_easy_remember_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".easy.EasyRememberPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_name_easy"
            android:layout_marginStart="8dp"
            android:textSize="16dp"
            android:background="@drawable/background_light_txt"
            android:layout_alignParentStart="true"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:text="@string/short_create"
            android:layout_marginRight="8dp"
            />
        <Button
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:text="@string/short_save"
            android:layout_marginRight="8dp"
            />
        <Button
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:text="@string/short_reset"
            android:layout_marginRight="8dp"
            />


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="64dp"
        android:background="@drawable/backgroung_output"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="12dp"
        android:padding="4dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_output"/>
    </ScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:paddingBottom="32dp"
        android:background="@drawable/backgroung_output">
        <LinearLayout
            android:orientation="vertical"
            android:background="@drawable/backgroung_output"
            android:padding="4dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/txt_strong_password_setting_head"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:background="@drawable/backgroung_output"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_easy_min"
                    />
                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <EditText
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="3"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:background="@drawable/backgroung_output"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_easy_min"
                    />
                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <Button
                    android:layout_width="56dp"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textSize="18dp"
                    android:textStyle="bold"/>
                <EditText
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="3"
                    />
                <Button
                    android:layout_width="56dp"
                    android:layout_height="wrap_content"
                    android:text="+"
                    android:textSize="18dp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:background="@drawable/backgroung_output"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_easy_min"
                    />
                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <Button
                    android:layout_width="56dp"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textSize="18dp"
                    android:textStyle="bold"/>
                <EditText
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="3"
                    />
                <Button
                    android:layout_width="56dp"
                    android:layout_height="wrap_content"
                    android:text="+"
                    android:textSize="18dp"
                    android:textStyle="bold"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:background="@drawable/backgroung_output"
                >
                <CheckBox
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/txt_easy_firstw"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_easy_numbs"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:background="@drawable/backgroung_output"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/txt_easy_depart" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:layout_width="32dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/backgroung_output"
                        android:padding="2dp"
                        android:textStyle="bold"
                        android:textSize="16dp"
                        android:layout_margin="4dp"
                        android:gravity="center"
                        android:text="-"/>
                    <TextView
                        android:layout_width="32dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/backgroung_output"
                        android:padding="2dp"
                        android:textStyle="bold"
                        android:textSize="16dp"
                        android:layout_margin="4dp"
                        android:gravity="center"
                        android:text="_"/>
                    <TextView
                        android:layout_width="32dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/backgroung_output"
                        android:padding="2dp"
                        android:textStyle="bold"
                        android:textSize="16dp"
                        android:layout_margin="4dp"
                        android:gravity="center"
                        android:text="."/>
                    <TextView
                        android:layout_width="32dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/backgroung_output"
                        android:padding="2dp"
                        android:textStyle="bold"
                        android:textSize="16dp"
                        android:layout_margin="4dp"
                        android:gravity="center"
                        android:text="#"/>
                    <TextView
                        android:layout_width="32dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/backgroung_output"
                        android:padding="2dp"
                        android:textStyle="bold"
                        android:textSize="16dp"
                        android:layout_margin="4dp"
                        android:gravity="center"
                        android:text="@"/>
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:paddingLeft="4dp"
                        android:paddingRight="4dp"
                        android:layout_margin="4dp"
                        android:background="@drawable/backgroung_output"
                        android:textSize="12dp"
                        android:hint="@string/hint_easy_design"/>
                </RadioGroup>
            </LinearLayout>


        </LinearLayout>


    </ScrollView>



</LinearLayout>
</layout>